# ledger-main

./: .gitignore  .yamllint  AGENTS.md  IMPLEMENTATION_SUMMARY.md  JSONL_PIPELINE.md  Makefile  PYTHON_STYLE_GUIDE.md  REFACTORING.md  TASK.md  TODO.txt  TODOS.txt  devenv.nix  main.bean  opencode.jsonc  pyproject.toml
.github/workflows/: ci.yml
_notes/: _depreciation.bean  _depreciation.md
_notes/purchases/: 206_property_purchase_notes.md  2943_property_purchase_notes.md
documents/sheer-value/: 2024-02-07-SHEER-VALUE.pdf.bean
ledger/: _balances.bean  _header.bean  balances.bean  header.bean  main.bean
ledger/2022/: 2022-SHEERVALUE-ALL.bean  2022-SheerValue-Multi.bean  2022.bean  _2022.bean  transactions.bean
ledger/2023/: 2023-12-Transactions-Multi.bean  2023-SHEERVALUE-ALL.bean  2023-SheerValue-Multi.bean  2023.bean  _2023.bean  transactions.bean
ledger/2024/: 2024-SHEERVALUE-ALL.bean  2024-SheerValue-Multi.bean  2024.bean  _2024.bean  transactions.bean
plugins/: find_duplicates.py
schema/: README.md  jsonl_to_bean.py  transaction.schema.json  validate_jsonl.py
scripts/: README.md  calculate_amortization.py  calculate_depreciation.py  check-pdf-bean.py  organize_includes.py  run-pdftotext.sh  run-tests.sh  verify_amortization.py  verify_depreciation.py
src/beanout/: cli.py  (+11 more)
tests/: test_ally_bank_golden.py  test_chase_golden.py  test_clover_leaf_golden.py  test_clover_leaf_sanitization.py  test_common_utilities.py  test_fidelity_golden.py  test_formatting.py  test_jsonl_golden.py  test_schwab_golden.py  test_sheer_value_golden.py  test_sps_golden.py
(+396 files in other folders)
