[project]
name = "ledger-main"
version = "0.1.0"
description = "Ledger data and statement parsers for Beancount."
requires-python = ">=3.12"
dependencies = [
  "beancount",
  "beancount-docverif",
  "beanquery",
]

[project.scripts]
beanout = "beanout.cli:main"

[dependency-groups]
dev = [
  "pytest",
  "pyyaml",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
